--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#">HJ</a>
+      <nav>
+        <a href="#">About</a>
+        <a href="#">Skills</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+  </body>
 </html>
