--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header class="flex justify-between pl-lg pr-lg pt pb">
       <a href="#">HJ</a>
       <nav>
-        <a href="#">About</a>
-        <a href="#">Skills</a>
-        <a href="#">Contact</a>
+        <a class="ml-lg" href="#">About</a>
+        <a class="ml-lg" href="#">Skills</a>
+        <a class="ml-lg" href="#">Contact</a>
       </nav>
     </header>
   </body>
