--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Space+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="space-mono">
     <header class="flex justify-between pl-lg pr-lg pt pb">
-      <a href="#">HJ</a>
-      <nav>
-        <a class="ml-lg" href="#">About</a>
-        <a class="ml-lg" href="#">Skills</a>
-        <a class="ml-lg" href="#">Contact</a>
+      <a class="orbitron f3" href="#">HamzaJ</a>
+      <nav class="f6">
+        <a class="ml-xxl" href="#">About</a>
+        <a class="ml-xxl" href="#">Skills</a>
+        <a class="ml-xxl" href="#">Contact</a>
       </nav>
     </header>
   </body>
