--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
         <a class="ml-xxl" href="#">Contact</a>
       </nav>
     </header>
+    <section>
+      <div class="mw-sm center pt-xl pb-xl">
+        <h1 class="f3 fw4">
+          👋Hello! I'm Hamza Jamil a Developer from Bolzano Italy
+        </h1>
+      </div>
+    </section>
   </body>
 </html>
