--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     />
   </head>
   <body class="space-mono">
-    <header class="flex justify-between pl-lg pr-lg pt pb">
-      <a class="orbitron f3" href="#">HamzaJ</a>
+    <header
+      class="flex justify-between items-center pl-lg pr-lg pt pb bg-black"
+    >
+      <a class="orbitron f3 white" href="#">HamzaJ</a>
       <nav class="f6">
-        <a class="ml-xxl" href="#">About</a>
-        <a class="ml-xxl" href="#">Skills</a>
-        <a class="ml-xxl" href="#">Contact</a>
+        <a class="white" href="#">About</a>
+        <a class="ml-xxl white" href="#">Skills</a>
+        <a class="ml-xxl white" href="#">Contact</a>
       </nav>
     </header>
-    <section>
-      <div class="mw-sm center pt-xl pb-xl">
+    <section class="bg-whitesmoke">
+      <div class="mw-sm center pt-xxxl pb-xxxl">
         <h1 class="f3 fw4">
           👋Hello! I'm Hamza Jamil a Developer from Bolzano Italy
         </h1>
