--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h1 class="f3 fw4">
           👋Hello! I'm Hamza Jamil a Developer from Bolzano Italy
         </h1>
+        <a class="cta" href="#">Read More</a>
       </div>
     </section>
   </body>
