base for proj 1

--- a/index.html
+++ b/index.html
@@ -32,5 +32,14 @@
         <a class="cta" href="#">Read More</a>
       </div>
     </section>
+    <section>
+      <div class="grid grid-1-1">
+        <div><img class="w-100" src="img/discord.png" alt="" /></div>
+        <div>
+          <h2>discord</h2>
+          <p>replica sel sito discord</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
