--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="ml-xxl white" href="#">Contact</a>
       </nav>
     </header>
-    <section class="bg-whitesmoke">
+    <section class="xbg-whitesmoke">
       <div class="mw-sm center pt-xxxl pb-xxxl">
         <h1 class="f3 fw4">
           👋Hello! I'm Hamza Jamil a Developer from Bolzano Italy
@@ -33,7 +33,7 @@
       </div>
     </section>
     <section>
-      <div class="grid grid-1-1">
+      <div class="mw-lg center grid grid-1-1 pb-xxxl">
         <div><img class="w-100" src="img/discord.png" alt="" /></div>
         <div>
           <h2>discord</h2>
