--- a/index.html
+++ b/index.html
@@ -33,11 +33,47 @@
       </div>
     </section>
     <section>
-      <div class="mw-lg center grid grid-1-1 pb-xxxl">
-        <div><img class="w-100" src="img/discord.png" alt="" /></div>
+      <div class="mw-md center grid grid-1-1 pb-xxxl">
+        <div><img class="w-100" src="img/spotify.png" alt="" /></div>
+        <div>
+          <h2>Spotify</h2>
+          <p>replica sel sito Spotify</p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="mw-md center grid grid-1-1 pb-xxxl">
         <div>
           <h2>discord</h2>
           <p>replica sel sito discord</p>
+        </div>
+        <div><img class="w-100" src="img/discord.png" alt="" /></div>
+      </div>
+    </section>
+    <section>
+      <div class="mw-md center grid grid-2-1 pb-xxxl">
+        <div><img class="w-100" src="img/spotify.png" alt="" /></div>
+        <div>
+          <h2>Spotify</h2>
+          <p>replica sel sito Spotify</p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="mw-md center grid grid-1-1 pb-xxxl">
+        <div>
+          <h2>discord</h2>
+          <p>replica sel sito discord</p>
+        </div>
+        <div><img class="w-100" src="img/discord.png" alt="" /></div>
+      </div>
+    </section>
+    <section>
+      <div class="mw-md center grid grid-2-1 pb-xxxl">
+        <div><img class="w-100" src="img/spotify.png" alt="" /></div>
+        <div>
+          <h2>Spotify</h2>
+          <p>replica sel sito Spotify</p>
         </div>
       </div>
     </section>
