--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
       </div>
     </section>
     <section>
-      <div class="mw-md center grid grid-2-1 pb-xxxl">
-        <div><img class="w-100" src="img/spotify.png" alt="" /></div>
+      <div class="mw-md center grid grid-1-1 pb-xxxl">
+        <div><img class="w-100" src="img/hj9.jpg" alt="" /></div>
         <div>
-          <h2>Spotify</h2>
+          <h2 class="f2">About</h2>
+          <h3 class="f5">work</h3>
           <p>replica sel sito Spotify</p>
         </div>
       </div>
